# craph

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  build.bat
cmake/: CRAPHConfig.cmake.in
inc/: craph_cuda.hpp  sparse_Structs.cpp  sparse_Structs.hpp  sparse_structs
inc/kernels/: edge_centric.cuh  vertex_centric.cuh
src/: graph.txt  sparse  sparse_structs.cpp
src/kernels/: edge_centric.cu  vertex_centric.cu  vertex_centrix.cu
tests/: Makefile  README.md  cuda_test.cu  simple_test.cpp  test_sparse_formats.cpp
